--- a/css/style.css
+++ b/css/style.css
@@ -179,6 +179,7 @@ body {
     flex-direction: column;
     align-items: center;
     padding: 4rem;
+    padding-bottom: 10rem;
     gap: 10rem;
 }
 
@@ -201,26 +202,46 @@ body {
 
 .project-img-container {
     width: 100%;
-    height: 500px;
+    /* height: 500px; */
     /* border: 2px solid salmon; */
     height: 100%;
+
 }
+
+.project-img {
+    /* width: 100%; */
+    max-width: 100%;
+    margin-bottom: 40px;
+    /* max-height: 300px; */
+    /* height: 287px; */
+}
+
+.hotel-img {
+    max-width: 100%;
+
+}
+
+/* .dice-app {
+    background-image: url('https://codezips.com/wp-content/uploads/2020/08/screencapture-file-C-Users-HP-Desktop-PIG-Game-JavaScript-master-index-html-2020-08-19-21_25_41.png');
+    background-position: top center;
+    background-size: 100%;
+    background-repeat: no-repeat;
+} */
 
 .url-app {
     background-image: url('https://res.cloudinary.com/dz209s6jk/image/upload/q_auto:good,w_900/Challenges/s99rf8z6jxpqhsqvk4mg.jpg');
     background-position: top center;
     background-size: 100%;
     background-repeat: no-repeat;
-
 }
 
-.sunny-app {
+/* .sunny-app {
     background-image: url('https://res.cloudinary.com/dz209s6jk/image/upload/q_auto:good,w_900/Challenges/lvj0udxz21q6bicxkysz.jpg');
     background-position: top;
     background-size: 100%;
     background-size: cover;
     background-repeat: no-repeat;
-}
+} */
 
 .ip-app {
     background-image: url('https://res.cloudinary.com/dz209s6jk/image/upload/q_auto:good,w_900/Challenges/uitbvuyjrnifyp6q3zuf.jpg');
@@ -253,6 +274,10 @@ body {
     gap: 2rem;
     padding: 0 3rem 3rem 3rem;
     text-align: center;
+}
+
+.project-icons {
+    width: 30px;
 }
 
 .project-tools h3 {
@@ -340,16 +365,59 @@ body {
     text-align: center;
     color: white;
     background-color: rgb(61, 58, 58);
+    /* background-color: rgb(14, 13, 13); */
 }
 
 .skills-icons {
     margin-top: 5rem;
-    display: flex;
-    flex-direction: column;
+    /* display: flex; */
+    /* flex-direction: column; */
+    /* align-items: center; */
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    align-items: center;
+    justify-content: center;
+    /* grid-template-rows: ; */
     gap: 3rem;
     color: cornflowerblue;
 }
 
+.skills-icons img {
+    width: 80px;
+}
+
+/* CONTACT ME SECTION */
+
+.contact-me {
+    padding: 2rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 35px;
+    background-color: white;
+    height: 600px;
+}
+
+.contact {
+    /* border: 1px solid black; */
+    padding: 2rem;
+    width: 300px;
+    height: 150px;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+    margin-bottom: 15px;
+    border-radius: 5px;
+    /* box-shadow: 0px 10px 15px -3px rgba(0, 0, 0, 0.1); */
+    box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
+}
+
+.contact-icons {
+    width: 30px;
+}
 
 /* FOOTER SECTION  */
 .footer-section {
@@ -505,6 +573,15 @@ body {
         margin-bottom: 2rem;
     }
 
+    .project-img {
+        /* width: 100%; */
+        max-width: 45%;
+        height: 100%;
+        margin-bottom: 0px;
+        /* max-height: 300px; */
+        /* height: 287px; */
+    }
+
     .project-card {
         display: flex;
         flex-direction: row;
@@ -512,7 +589,11 @@ body {
         height: 300px;
         /* border: 2px solid black; */
         margin-left: 50px;
+    }
 
+    .hotel-img {
+        max-width: 100%;
+        height: 100%;
     }
 
     .project-card:nth-of-type(1) {
@@ -573,6 +654,7 @@ body {
         align-items: flex-start;
         gap: 2rem;
         text-align: left;
+        padding-left: 10px;
     }
 
 
@@ -611,11 +693,23 @@ body {
 
     .skills-icons {
         margin-top: 5rem;
-        display: flex;
-        flex-direction: row;
-        justify-content: center;
+        /* display: flex;
+        flex-direction: row; */
+        /* display: ;
+        justify-content: center; */
+        grid-template-columns: repeat(5, 150px);
         gap: 3rem;
         color: cornflowerblue;
+    }
+
+    /* CONTACT SECTION */
+    .contact-me {
+        height: 400px;
+    }
+
+    .contact-wrapper {
+        display: flex;
+        gap: 30px;
     }
 
 
